# GizmoGuide

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py  tracing.py
app/agent/: __init__.py  intent_classifier.py  llm_client.py  prompts.py  purchase_agent.py  recommend_agent.py  schemas.py  state.py
app/api/: chat.py  products.py  recommend.py
app/config/: settings.py
app/connectors/: __init__.py  mock_product_spec.py
app/data/: mock_products.json
app/decision/: __init__.py  engine.py  weights.py
app/embedding/: __init__.py  client.py
app/explanation/: __init__.py  generator.py
app/knowledge/: __init__.py  debug.py  models.py  query_rewriter.py  seed.py  store.py
app/memory/: __init__.py  manager.py  models.py
app/orchestrator/: __init__.py  conversation.py  long_term_memory_extractor.py  profile_extractor.py
app/reranker/: __init__.py  client.py
app/schemas/: __init__.py  chat.py  intent.py  long_term_memory.py  product.py  recommendation.py  user_profile.py
app/tools/: __init__.py  knowledge_search_tool.py  memory_fork_tool.py  product_tool.py  scoring_tool.py  web_search_tool.py
docs/: MEMORY_CONTEXT_HARNESS.md
frontend/: app.js  index.html  styles.css
setup/: seed-knowledge.py  setup-minio-bucket.sh
setup/db/: Dockerfile
tests/: test_chat_flow.py  test_intent_classifier.py  test_memory_manager.py  test_products.py  test_profile_extractor.py  test_recommend_agent.py  test_recommendation_flow.py  test_web_search_tool.py
(+14 files in other folders)
