[project]
name = "gizmo-guide"
version = "0.1.0"
description = "A personalized electronic product recommendation agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-ai-slim[openai]>=2.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]